init user class, add gitignore...

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <canvas id="canvas"></canvas>
 
-<script type="text/javascript" src="classes/Board.js"></script>
+<script type="text/javascript" src="assets/js/classes/Game.js"></script>
+<script type="text/javascript" src="assets/js/classes/User.js"></script>
+
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
