--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <script type="text/javascript" src="assets/js/classes/Game.js"></script>
 <script type="text/javascript" src="assets/js/classes/User.js"></script>
+<script type="text/javascript" src="assets/js/classes/Navigation.js"></script>
 
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
