View class, navigation class, refresh methods, left right

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <canvas id="canvas"></canvas>
 
+<script type="text/javascript" src="assets/js/classes/View.js"></script>
 <script type="text/javascript" src="assets/js/classes/Game.js"></script>
 <script type="text/javascript" src="assets/js/classes/User.js"></script>
 <script type="text/javascript" src="assets/js/classes/Navigation.js"></script>
