--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="canvas"></canvas>
 
+<main>
+    <canvas class="layer" id="bg_layer1"></canvas>
+    <canvas class="layer" id="bg_layer2"></canvas>
+    <canvas id="canvas"></canvas>
+</main>
+
+
+<script type="text/javascript" src="assets/js/classes/Background.js"></script>
 <script type="text/javascript" src="assets/js/classes/View.js"></script>
 <script type="text/javascript" src="assets/js/classes/Game.js"></script>
 <script type="text/javascript" src="assets/js/classes/User.js"></script>
